Towards LSQ2